<resources>
    <string name="app_name">SCD_MobileNetV3_Large</string>
    <string name="menu_text">Skin Cancer Detection App</string>

    <string name="button_text">Take Picture</string>
    <string name="button2_text">Upload from Gallery</string>
    <string name="before_result">Share an image to begin!</string>
    <string name="after_result">Skin cancer detected:</string>

    <!-- Menu Strings -->
    <string name="model_info_title">Image Classification\nMobileNetV3-Large</string>
    <string name="model_info_description">Inference in int8.\nInput is float32 tensor of 1x3x224x224 shape.\n</string>
    <string name="developer_info_title">Image Classification\nMobileNetV3-Large</string>
    <string name="developer_info_description">Inference in int8.\nInput is float32 tensor of 1x3x224x224 shape.\n</string>

    <!-- Developer Details -->
    <string name="developers">Developers:</string>
    <string name="dev1">Saarthak Vijayvargiya</string>
    <string name="project">Project Source Code:</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">GitHub</string>
</resources>
